tests-integration/tests/roundtrip/invalid/semantic_errors/divide_by_constant_zero/divide_by_constant_zero.essence
find x : int
such that x = 1 / 0